==> betaflight/betaflight/src/platform/GD32/timer_stdperiph.c <==
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include <math.h>
#include "platform.h"
#include "build/atomic.h"
#include "common/utils.h"
#include "drivers/nvic.h"
#include "drivers/io.h"
#include "platform/rcc.h"
#include "drivers/system.h"
#include "drivers/timer.h"
#include "drivers/timer_impl.h"
#define TIM_N(n) (1 << (n))
#define USED_TIMER_COUNT BITCOUNT(USED_TIMERS)
#define CC_CHANNELS_PER_TIMER 4
#define TIMER_INT_CHx(ch) (TIMER_INT_CH0 << (ch))
#define TIMER_INDEX(i) BITCOUNT((TIM_N(i) - 1) & USED_TIMERS)

static void timerNVICConfigure(uint8_t irq)
{
    nvic_irq_enable(irq , NVIC_PRIORITY_BASE(NVIC_PRIO_TIMER), NVIC_PRIORITY_SUB(NVIC_PRIO_TIMER));
}

void configTimeBase(TIM_TypeDef *tim, uint16_t period, uint32_t hz)
{
    timer_parameter_struct timer_initpara;

    timer_struct_para_init(&timer_initpara);

    timer_initpara.period            = (period - 1) & 0xFFFF;
    timer_initpara.prescaler         = (timerClock(tim) / hz) - 1;
    timer_initpara.clockdivision     = TIMER_CKDIV_DIV1;
    timer_initpara.alignedmode       = TIMER_COUNTER_EDGE;
    timer_initpara.counterdirection  = TIMER_COUNTER_UP;
    timer_initpara.repetitioncounter = 0;
    timer_init((uint32_t)tim, &timer_initpara);
}

void timerConfigure(const timerHardware_t *timerHardwarePtr, uint16_t period, uint32_t hz)
{
    configTimeBase(timerHardwarePtr->tim, period, hz);
    timer_enable((uint32_t)timerHardwarePtr->tim);

    uint8_t irq = timerInputIrq(timerHardwarePtr->tim);
    timerNVICConfigure(irq);

    switch (irq) {
        case TIMER0_Channel_IRQn:
        timerNVICConfigure(TIMER0_UP_TIMER9_IRQn);
        break;

        case TIMER7_Channel_IRQn:
        timerNVICConfigure(TIMER7_UP_TIMER12_IRQn);
        break;
    }
}

void timerChInit(const timerHardware_t *timHw, channelType_t type, int irqPriority, uint8_t irq)
{
    unsigned channel = timHw - TIMER_HARDWARE;
    if (channel >= TIMER_CHANNEL_COUNT) {
        return;
    }

    timerChannelInfo[channel].type = type;
    unsigned timer = lookupTimerIndex(timHw->tim);
    if (timer >= USED_TIMER_COUNT)
        return;
    if (irqPriority < timerInfo[timer].priority) {
        // it would be better to set priority in the end, but current startup sequence is not ready
        configTimeBase((void *)usedTimers[timer], 0, 1);
        timer_enable(usedTimers[timer]);

        nvic_irq_enable(irq, NVIC_PRIORITY_BASE(irqPriority), NVIC_PRIORITY_SUB(irqPriority));

        timerInfo[timer].priority = irqPriority;
    }
}

static void timerChConfig_UpdateOverflow(timerConfig_t *cfg, const TIM_TypeDef *tim)
{
    timerOvrHandlerRec_t **chain = &cfg->overflowCallbackActive;
    ATOMIC_BLOCK(NVIC_PRIO_TIMER) {

        if (cfg->updateCallback) {
            *chain = cfg->updateCallback;
            chain = &cfg->updateCallback->next;
        }

        for (int i = 0; i < CC_CHANNELS_PER_TIMER; i++)
            if (cfg->overflowCallback[i]) {
                *chain = cfg->overflowCallback[i];
                chain = &cfg->overflowCallback[i]->next;
            }
        *chain = NULL;
    }
    // enable or disable IRQ
    if (cfg->overflowCallbackActive) {
        timer_interrupt_enable((uint32_t)tim, TIMER_INT_UP);
    } else {
        timer_interrupt_disable((uint32_t)tim, TIMER_INT_UP);
    }
}

void timerChConfigCallbacks(const timerHardware_t *timHw, timerCCHandlerRec_t *edgeCallback, timerOvrHandlerRec_t *overflowCallback)
{
    uint8_t timerIndex = lookupTimerIndex(timHw->tim);
    if (timerIndex >= USED_TIMER_COUNT) {
        return;
    }
    uint8_t channelIndex = lookupChannelIndex(timHw->channel);
    if (edgeCallback == NULL)   // disable irq before changing callback to NULL
        timer_interrupt_disable((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel));

    // setup callback info
    timerConfig[timerIndex].edgeCallback[channelIndex] = edgeCallback;
    timerConfig[timerIndex].overflowCallback[channelIndex] = overflowCallback;
    // enable channel IRQ
    if (edgeCallback)
        timer_interrupt_enable((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel));

    timerChConfig_UpdateOverflow(&timerConfig[timerIndex], timHw->tim);
}

void timerChConfigCallbacksDual(const timerHardware_t *timHw, timerCCHandlerRec_t *edgeCallbackLo, timerCCHandlerRec_t *edgeCallbackHi, timerOvrHandlerRec_t *overflowCallback)
{
    uint8_t timerIndex = lookupTimerIndex(timHw->tim);
    if (timerIndex >= USED_TIMER_COUNT) {
        return;
    }

    uint16_t chLo = timHw->channel & ~TIMER_CH_1;      // lower channel
    uint16_t chHi = timHw->channel | TIMER_CH_1;       // upper channel

    uint8_t channelIndex = lookupChannelIndex(chLo);   // get index of lower channel

    if (edgeCallbackLo == NULL)   // disable irq before changing setting callback to NULL
        timer_interrupt_disable((uint32_t)(timHw->tim), TIMER_INT_CHx(chLo));

    if (edgeCallbackHi == NULL)   // disable irq before changing setting callback to NULL
        timer_interrupt_disable((uint32_t)(timHw->tim), TIMER_INT_CHx(chHi));

    // setup callback info
    timerConfig[timerIndex].edgeCallback[channelIndex] = edgeCallbackLo;
    timerConfig[timerIndex].edgeCallback[channelIndex + 1] = edgeCallbackHi;
    timerConfig[timerIndex].overflowCallback[channelIndex] = overflowCallback;
    timerConfig[timerIndex].overflowCallback[channelIndex + 1] = NULL;

    // enable channel IRQs
    if (edgeCallbackLo) {
        timer_flag_clear((uint32_t)(timHw->tim), TIMER_INT_CHx(chLo)); 
        timer_interrupt_enable((uint32_t)(timHw->tim), TIMER_INT_CHx(chLo)); 
    }

    if (edgeCallbackHi) {
        timer_flag_clear((uint32_t)(timHw->tim), TIMER_INT_CHx(chHi)); 
        timer_interrupt_enable((uint32_t)(timHw->tim), TIMER_INT_CHx(chHi));        
    }

    timerChConfig_UpdateOverflow(&timerConfig[timerIndex], timHw->tim);
}

void timerChITConfigDualLo(const timerHardware_t *timHw, FunctionalState newState)
{
    if (newState) {
        timer_interrupt_enable((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel &~ TIMER_CH_1));
    } else {
        timer_interrupt_disable((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel &~ TIMER_CH_1));
    }
}

void timerChITConfig(const timerHardware_t *timHw, FunctionalState newState)
{
    if (newState) {
        timer_interrupt_enable((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel));
    } else {
        timer_interrupt_disable((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel));
    }
}

void timerChClearCCFlag(const timerHardware_t *timHw)
{
    timer_flag_clear((uint32_t)(timHw->tim), TIMER_INT_CHx(timHw->channel));
}

void timerChConfigIC(const timerHardware_t *timHw, bool polarityRising, unsigned inputFilterTicks)
{
    timer_ic_parameter_struct timer_icinitpara;
    timer_channel_input_struct_para_init(&timer_icinitpara);
    timer_icinitpara.icpolarity  = polarityRising ? TIMER_IC_POLARITY_RISING : TIMER_IC_POLARITY_FALLING;
    timer_icinitpara.icselection = TIMER_IC_SELECTION_DIRECTTI;
    timer_icinitpara.icprescaler = TIMER_IC_PSC_DIV1;
    timer_icinitpara.icfilter    = getFilter(inputFilterTicks);
    timer_input_capture_config((uint32_t)(timHw->tim), timHw->channel, &timer_icinitpara); 
}

void timerChConfigICDual(const timerHardware_t *timHw, bool polarityRising, unsigned inputFilterTicks)
{
    timer_ic_parameter_struct timer_icinitpara;
    bool directRising = (timHw->channel & TIMER_CH_1) ? !polarityRising : polarityRising;
    // configure direct channel
    timer_channel_input_struct_para_init(&timer_icinitpara);


    timer_icinitpara.icpolarity  = directRising ? TIMER_IC_POLARITY_RISING : TIMER_IC_POLARITY_FALLING;
    timer_icinitpara.icselection = TIMER_IC_SELECTION_DIRECTTI;
    timer_icinitpara.icprescaler = TIMER_IC_PSC_DIV1;
    timer_icinitpara.icfilter    = getFilter(inputFilterTicks);
    timer_input_capture_config((uint32_t)(timHw->tim), timHw->channel, &timer_icinitpara); 
    // configure indirect channel
    timer_icinitpara.icpolarity  = directRising ? TIMER_IC_POLARITY_FALLING : TIMER_IC_POLARITY_RISING;
    timer_icinitpara.icselection = TIMER_IC_SELECTION_INDIRECTTI;
    timer_input_capture_config((uint32_t)(timHw->tim), (timHw->channel ^ TIMER_CH_1), &timer_icinitpara); // get opposite channel no
}

void timerChICPolarity(const timerHardware_t *timHw, bool polarityRising)
{
    timCCER_t tmpccer = TIMER_CHCTL2((uint32_t)(timHw->tim));
    tmpccer &= ~(TIMER_CHCTL2_CH0P << (timHw->channel << 2));
    tmpccer |= polarityRising ? (TIMER_IC_POLARITY_RISING << (timHw->channel << 2)) : (TIMER_IC_POLARITY_FALLING << (timHw->channel << 2));
    TIMER_CHCTL2((uint32_t)(timHw->tim)) = tmpccer;
}

volatile timCCR_t* timerChCCRHi(const timerHardware_t *timHw)
{
    return (volatile timCCR_t*)((volatile uint32_t*)((uintptr_t)&TIMER_CH0CV(&(timHw->tim))) + (timHw->channel | TIMER_CH_1));
}

volatile timCCR_t* timerChCCRLo(const timerHardware_t *timHw)
{
    return (volatile timCCR_t*)((volatile uint32_t*)((uintptr_t)&TIMER_CH0CV(&(timHw->tim))) + (timHw->channel & ~TIMER_CH_1));
}

void timerChConfigOC(const timerHardware_t* timHw, bool outEnable, bool stateHigh)
{
    timer_oc_parameter_struct timer_ocintpara;
    timer_channel_output_struct_para_init(&timer_ocintpara);

    uint16_t ocmode; 
    if (outEnable) {
        ocmode = TIMER_OC_MODE_INACTIVE;
        timer_ocintpara.outputstate = TIMER_CCX_ENABLE;

        if (timHw->output & TIMER_OUTPUT_INVERTED) {
            stateHigh = !stateHigh;
        }
        timer_ocintpara.ocpolarity  = stateHigh ? TIMER_OC_POLARITY_HIGH : TIMER_OC_POLARITY_LOW;
    } else {
        ocmode = TIMER_OC_MODE_TIMING;   
    }

    timer_channel_output_config((uint32_t)(timHw->tim), timHw->channel, &timer_ocintpara);
    timer_channel_output_mode_config((uint32_t)(timHw->tim), timHw->channel, ocmode); 
    timer_channel_output_shadow_config((uint32_t)(timHw->tim), timHw->channel, TIMER_OC_SHADOW_DISABLE);
}

static void timCCxHandler(TIM_TypeDef *tim, timerConfig_t *timerConfig)
{
    uint16_t capture;
    unsigned tim_status;
    tim_status = TIMER_INTF((uint32_t)tim) & TIMER_DMAINTEN((uint32_t)tim);

    while (tim_status) {
        // flags will be cleared by reading CCR in dual capture, make sure we call handler correctly
        // current order is highest bit first. Code should not rely on specific order (it will introduce race conditions anyway)
        unsigned bit = __builtin_clz(tim_status);
        unsigned mask = ~(0x80000000 >> bit);
        TIMER_INTF((uint32_t)tim) = mask;
        tim_status &= mask;

        switch (bit) {
            case __builtin_clz(TIMER_INT_UP): {

                if (timerConfig->forcedOverflowTimerValue != 0) {
                    capture = timerConfig->forcedOverflowTimerValue - 1;
                    timerConfig->forcedOverflowTimerValue = 0;
                } else {
                    capture = TIMER_CAR((uint32_t)tim);
                }

                timerOvrHandlerRec_t *cb = timerConfig->overflowCallbackActive;
                while (cb) {
                    cb->fn(cb, capture);
                    cb = cb->next;
                }
                break;
            }
            case __builtin_clz(TIMER_INT_CH0):
                if (timerConfig->edgeCallback[0]) {
                    timerConfig->edgeCallback[0]->fn(timerConfig->edgeCallback[0], TIMER_CH0CV((uint32_t)tim));
                }
                break;
            case __builtin_clz(TIMER_INT_CH1):
                if (timerConfig->edgeCallback[1]) {
                        timerConfig->edgeCallback[1]->fn(timerConfig->edgeCallback[1], TIMER_CH1CV((uint32_t)tim));
                }
                break;
            case __builtin_clz(TIMER_INT_CH2):
                if (timerConfig->edgeCallback[2]) {
                        timerConfig->edgeCallback[2]->fn(timerConfig->edgeCallback[2], TIMER_CH2CV((uint32_t)tim));
                }
                break;
            case __builtin_clz(TIMER_INT_CH3):
                if (timerConfig->edgeCallback[3]) {
                        timerConfig->edgeCallback[3]->fn(timerConfig->edgeCallback[3], TIMER_CH3CV((uint32_t)tim));
                }
                break;
        }
    }
}

static inline void timUpdateHandler(TIM_TypeDef *tim, timerConfig_t *timerConfig)
{
    uint16_t capture;
    unsigned tim_status;
    tim_status = TIMER_INTF((uint32_t)tim) & TIMER_DMAINTEN((uint32_t)tim);
    while (tim_status) {
        // flags will be cleared by reading CCR in dual capture, make sure we call handler correctly
        // currrent order is highest bit first. Code should not rely on specific order (it will introduce race conditions anyway)
        unsigned bit = __builtin_clz(tim_status);
        unsigned mask = ~(0x80000000 >> bit);
        TIMER_INTF((uint32_t)tim) = mask;
        tim_status &= mask;
        switch (bit) {
            case __builtin_clz(TIMER_INT_UP): {

                if (timerConfig->forcedOverflowTimerValue != 0) {
                    capture = timerConfig->forcedOverflowTimerValue - 1;
                    timerConfig->forcedOverflowTimerValue = 0;
                } else {
                    capture = TIMER_CAR((uint32_t)tim);
                }

                timerOvrHandlerRec_t *cb = timerConfig->overflowCallbackActive;
                while (cb) {
                    cb->fn(cb, capture);
                    cb = cb->next;
                }
                break;
            }
        }
    }
}

void timerForceOverflow(TIM_TypeDef *tim)
{
    uint8_t timerIndex = lookupTimerIndex((const TIM_TypeDef *)tim);

    ATOMIC_BLOCK(NVIC_PRIO_TIMER) {
        // Save the current count so that PPM reading will work on the same timer that was forced to overflow
        timerConfig[timerIndex].forcedOverflowTimerValue = TIMER_CNT((uint32_t)tim) + 1;

        // Force an overflow by setting the UG bit
        TIMER_SWEVG((uint32_t)tim) |= TIMER_SWEVG_UPG;
    }
}

void timerOCInit(TIM_TypeDef *tim, uint8_t channel, TIM_OCInitTypeDef *init)
{
    timer_channel_output_config((uint32_t)tim, (uint16_t)channel, init);
}

uint16_t timerDmaSource(uint8_t channel)
{
    switch (channel) {
    case TIMER_CH_0:
        return TIMER_DMA_CH0D;
    case TIMER_CH_1:
        return TIMER_DMA_CH1D;
    case TIMER_CH_2:
        return TIMER_DMA_CH2D;
    case TIMER_CH_3:
        return TIMER_DMA_CH3D;
    }
    return 0;
}
